# live-stream-source

./: .gitignore  CMakeLists.txt  README.md  installer.iss.in
.github/workflows/: build-release.yml
CI/: install_linux_deps.sh  install_macos_deps.sh  install_windows_deps.ps1
cmake/: embed_html.py
data/locale/: en-US.ini  tr-TR.ini
docs/: dashboard.html  stats-overlay.html
src/core/: common.h  live-stream-source.cpp  live-stream-source.h  obsconfig.h  plugin-main.cpp  plugin-main.h  plugin-settings.cpp  plugin-settings.h
src/media/: audio-decoder.cpp  audio-decoder.h  frame-queue.cpp  frame-queue.h  stream-demuxer.cpp  stream-demuxer.h  video-decoder.cpp  video-decoder.h
src/network/: ws-stats-server.cpp  ws-stats-server.h
src/protocols/ll-hls/: ll-hls-client.cpp  ll-hls-client.h  ll-hls-fetcher.cpp  ll-hls-fetcher.h  ll-hls-parser.cpp  ll-hls-parser.h
src/protocols/whep/: whep-client.cpp  whep-client.h  whep-signaling.cpp  whep-signaling.h
src/ui/: dashboard-dialog.cpp  dashboard-dialog.h
src/utils/: bitrate-monitor.cpp  bitrate-monitor.h  catchup-controller.cpp  catchup-controller.h  reconnect-manager.cpp  reconnect-manager.h
